# newtonmath

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: newtonmath_test.rs
